engine/tests/detection_corpus/bad/exec_new_function.js
const fn = new Function('data', body);
